--- a/onlinebookstore/pom.xml
+++ b/onlinebookstore/pom.xml
@@ -27,8 +27,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
+			 <scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
